feat: add endpointto handle intial images and error handling
